<resources>
    <string name="app_name">MySurvey</string>
    <string name="welcome">WELCOME TO</string>
    <string name="take">TAKE PART IN OUR SURVEY!</string>
    <string name="alert">Before we start, here are things you should know:</string>
    <string name="rule_1"> - Please be honest when making your choice.</string>
    <string name="rule_2"> - We are just doing a research so you don\'t have to fake your information.</string>
    <string name="rule_3"> - Please follow the step we designed for you and don\'t skip any questions.</string>
    <string name="accept"> I accept these requests.</string>
    <string name="start">LET\'S START!</string>
    <string name="question_1">Question 1</string>
    <string name="question_1_content">Which brand of your phone will you choose if you are going to buy a new one?</string>
    <string name="title_activity_question_1">question_1</string>
    <string name="iphone">Iphone</string>
    <string name="nokia">Nokia</string>
    <string name="samsung">Samsung</string>
    <string name="mi">MI</string>
    <string name="lenove">Lenove</string>
    <string name="sony">Sony</string>
    <string name="other">Other</string>
    <string name="next">NEXT</string>
    <string name="question_2">Question 2</string>
    <string name="question_2_content">How much does your phone cost?</string>
    <string name="under_1000">Under 1000</string>
    <string name="between_1000_1999">1000&#8211;1999</string>
    <string name="between_2000_2999">2000&#8211;2999</string>
    <string name="between_3000_3999">3000&#8211;3999</string>
    <string name="mt_4000">More than 4000</string>
    <string name="question_3">Question 3</string>
    <string name="question_3_content">What kind of phone are you using ?</string>
    <string name="second_g">2G</string>
    <string name="third_g">3G</string>
    <string name="forth_g">4G</string>
    <string name="question_4">Question 4</string>
    <string name="question_4_content">What functions does your phone have now?</string>
    <string name="mf">Music functions</string>
    <string name="pf">Photo functions</string>
    <string name="gf">Games functions</string>
    <string name="bf">Business functions(Words, Excel, etcetera.)</string>
    <string name="gps">GPS functions</string>
    <string name="df">Data functions(Bluetooth, WLAN,etcetera..)</string>
    <string name="question_5">Question 5</string>
    <string name="question_5_content">What functions are the most often used</string>
    <string name="question_6">Question 6</string>
    <string name="question_6_content">What functions are the most often used?</string>
    <string name="question_7">Question 7</string>
    <string name="question_7_content">In which condition will you buy a new phone?</string>
    <string name="oneORtwo">When the old phone has been used for a year or two.(but it still works)</string>
    <string name="over_threeY">When the old phone has been used for more than three years.(but it still works.)</string>
    <string name="bd">When the old phone breaks down.</string>
    <string name="release">When a new phone is released.</string>
    <string name="question_8">Question 8</string>
    <string name="question_8_content">Which brand of your phone will you choose if you are going to buy a new one?</string>
    <string name="question_9">Question 9</string>
    <string name="question_9_content">What characteristic do you think is most important to evaluate a phone?</string>
    <string name="appearance">Appearance</string>
    <string name="price">Price</string>
    <string name="performance">Performance</string>
    <string name="question_10">Question 10</string>
    <string name="question_10_content">How old are you?</string>
    <string name="u18">Under 18</string>
    <string name="betwee_19_25">19&#8211;25</string>
    <string name="between_26_35">26&#8211;35</string>
    <string name="b36">Beyond 36</string>
    <string name="question_11">Question 11</string>
    <string name="question_11_content">What is your gender?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="question_12">Question 12</string>
    <string name="question_12_content">How much money do you earn per month?</string>
    <string name="no_job">I haven\'t got a job.</string>
    <string name="u3000">Under 3000</string>
    <string name="between_3000_5000">3000&#8211;5000</string>
    <string name="between_5000_10000">5000&#8211;10000</string>
    <string name="m10000">More than 10000</string>
    <string name="thank">THANK YOU</string>
    <string name="you">FOR YOUR ANSWER!</string>
    <string name="finish">FINISH</string>
    <string name="final_outcome">final outcome</string>
    <string name="no">none</string>
    <string name="save">SAVE</string>
</resources>
