<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--  Start : Your code should be within this block -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/question_1"
        android:layout_margin="10dp"
        android:textSize="22sp"
        android:textColor="@color/colorBlack"
        android:text="@string/question_1" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/question_1_content"
        android:layout_marginTop="40dp"
        android:layout_marginRight="60dp"
        android:layout_marginLeft="60dp"
        android:textSize="18sp"
        android:text="@string/question_1_content" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rg_question_1"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        >

        <RadioButton
            android:id="@+id/Iphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/iphone" />

        <RadioButton
            android:id="@+id/Nokia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nokia" />

        <RadioButton
            android:id="@+id/Samsung"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/samsung" />

        <RadioButton
            android:id="@+id/MI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mi" />

        <RadioButton
            android:id="@+id/Lenove"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="lenovo" />

        <RadioButton
            android:id="@+id/Sony"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sony" />

        <RadioButton
            android:id="@+id/Others"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/other" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">

        <Button
            android:id="@+id/btn_question_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorBlack"
            android:text="@string/next" />
    </LinearLayout>
    <!-- END    : Your code should be within this block -->
</LinearLayout>


