<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--  Start : Your code should be within this block -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/question_12"
        android:layout_margin="10dp"
        android:textSize="22sp"
        android:textColor="@color/colorBlack"
        android:text="@string/question_12" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/question_12_content"
        android:layout_marginTop="40dp"
        android:layout_marginRight="60dp"
        android:layout_marginLeft="60dp"
        android:textSize="18sp"
        android:text="@string/question_11_content" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rg_question_12"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        >

        <RadioButton
            android:id="@+id/rBtn_noJob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/no_job" />

        <RadioButton
            android:id="@+id/rBtn_under-3000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/u3000" />

        <RadioButton
            android:id="@+id/rBtn_3000-5000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/between_3000_5000" />

        <RadioButton
            android:id="@+id/rBtn_5000-10000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/between_5000_10000" />

        <RadioButton
            android:id="@+id/rBtn_over-10000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/m10000" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">

        <Button
            android:id="@+id/btn_question_12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorBlack"
            android:text="@string/next" />
    </LinearLayout>

    <!-- END    : Your code should be within this block -->

</LinearLayout>
