<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--  Start : Your code should be within this block -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/question_3"
        android:layout_margin="10dp"
        android:textSize="22sp"
        android:textColor="@color/colorBlack"
        android:text="@string/question_3" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/question_3_content"
        android:layout_marginTop="40dp"
        android:layout_marginRight="60dp"
        android:layout_marginLeft="60dp"
        android:textSize="18sp"
        android:text="@string/question_3_content" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rg_question_3"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        >
        <RadioButton
            android:id="@+id/rBtn_2G"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/second_g" />

        <RadioButton
            android:id="@+id/rBtn_3G"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/third_g" />

        <RadioButton
            android:id="@+id/rBtn_4G"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forth_g" />

        <RadioButton
            android:id="@+id/rBtn_others"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Others" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">

        <Button
            android:id="@+id/btn_question_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorBlack"
            android:text="@string/next" />
    </LinearLayout>
    <!-- END    : Your code should be within this block -->

</LinearLayout>
