<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/linearlayout">

    <!--  Start : Your code should be within this block -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/question_4"
        android:layout_margin="10dp"
        android:textSize="22sp"
        android:textColor="@color/colorBlack"
        android:text="@string/question_4" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/question_4_content"
        android:layout_marginTop="40dp"
        android:layout_marginRight="60dp"
        android:layout_marginLeft="60dp"
        android:textSize="18sp"
        android:text="@string/question_4_content" />


        <CheckBox
            android:id="@+id/cb_mf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:text="@string/mf" />

        <CheckBox
            android:id="@+id/cb_pf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:text="@string/pf" />

        <CheckBox
            android:id="@+id/cb_gf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:text="@string/gf" />

        <CheckBox
            android:id="@+id/cb_bf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:text="Bussiness functions(Word,Excel,etc.)" />

        <CheckBox
            android:id="@+id/cb_GPS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:text="@string/gps" />

        <CheckBox
            android:id="@+id/cb_df"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:text="Data functions(Bluetooth,WLAN,etc.)" />

        <CheckBox
            android:id="@+id/cb_others"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:text="Others" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">



        <Button
            android:id="@+id/btn_question_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorBlack"
            android:text="@string/next" />
    </LinearLayout>

    <!-- END    : Your code should be within this block -->

</LinearLayout>
